--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ publish = false
 
 [dependencies]
 async-tungstenite = { version = "0.25", features = ["tokio-rustls-webpki-roots"] }
+config = "0.11"
 iced = { version = "0.12", features = ["debug", "wgpu", "webgl", "tokio"] }
 once_cell = "1.0"
+serde = { version = "1", features = ["derive"] }
 tokio = { version = "1.0", features = ["time"] }
 wgpu = "0.19"
 winit = "0.29"
