--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ async-tungstenite = { version = "0.25", features = ["tokio-rustls-webpki-roots"]
 config = "0.11"
 iced = { version = "0.12", features = ["debug", "wgpu", "webgl", "tokio"] }
 once_cell = "1.0"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1.0", features = ["time"] }
 wgpu = "0.19"
