--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ once_cell = "1.0"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1.0", features = ["time"] }
+validator = "0.14"
 wgpu = "0.19"
 winit = "0.29"
 
@@ -21,3 +22,9 @@ console_error_panic_hook = "0.1"
 console_log = "1.0"
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = ["Element", "HtmlCanvasElement", "Window", "Document"] }
+
+[dev-dependencies]
+claim = "0.5"
+fake = "~2.3"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
