--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,12 @@ async-tungstenite = { version = "0.25", features = ["tokio-rustls-webpki-roots"]
 config = "0.11"
 iced = { version = "0.12", features = ["debug", "wgpu", "webgl", "tokio"] }
 once_cell = "1.19"
+rand = "0.8"
+base64 = "0.12"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1.0", features = ["time"] }
+url = "2.5"
 validator = "0.17"
 wgpu = "0.19"
 winit = "0.29"
