--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ url = "2.5"
 validator = "0.17"
 wgpu = "0.19"
 winit = "0.29"
+yrs = "0.18.2"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1"
