--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,16 @@ base64 = "0.12"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1.0", features = ["time"] }
+tracing = "0.1.40"
 url = "2.5"
 validator = "0.17"
 wgpu = "0.19"
 winit = "0.29"
 yrs = "0.18.2"
+tracing-log = "0.2.0"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tracing-subscriber = "0.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1"
