--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -6,23 +6,25 @@ edition = "2021"
 publish = false
 
 [dependencies]
+async-tungstenite = { version = "0.25", features = ["tokio-rustls-webpki-roots"] }
+config = "0.11"
 iced = { version = "0.12", features = ["debug", "wgpu", "webgl", "tokio"] }
+iced_aw = { version = "0.8", features = ["modal"] }
+once_cell = "1.19"
 rand = "0.8"
 base64 = "0.12"
-once_cell = "1.19"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1.0", features = ["time"] }
+tracing = "0.1.40"
 url = "2.5"
 validator = "0.17"
 wgpu = "0.19"
 winit = "0.29"
-ws_stream_wasm = "0.7"
 yrs = "0.18.2"
+tracing-log = "0.2.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-tracing = "0.1.40"
-tracing-log = "0.2.0"
 tracing-subscriber = "0.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
