chore: rename rust part of project to editor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "multiplayer-client"
+name = "editor"
 version = "0.1.0"
 authors = ["Rick de Boer <rick.deboer@live.nl>"]
 edition = "2021"
