--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ url = "2.5"
 validator = "0.17"
 wgpu = "0.19"
 winit = "0.29"
-ws_stream_wasm = "0.7"
+ws_stream_wasm = { version = "0.7" }
 yrs = "0.18.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -29,7 +29,7 @@ tracing-subscriber = "0.3"
 console_error_panic_hook = "0.1"
 console_log = "1.0"
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["Element", "HtmlCanvasElement", "Window", "Document"] }
+web-sys = { version = "0.3", features = ["Element", "HtmlCanvasElement", "Window", "Document", "WebSocket"] }
 
 [dev-dependencies]
 fake = "~2.3"
