--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "./editor/wasm-bind.sh && next dev",
     "build": "./editor/wasm-bind.sh && next build",
     "start": "./editor/wasm-bind.sh && next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "axios": "^1.6.8",
@@ -17,14 +18,17 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "clsx": "^2.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   }
 }
