--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.3",
-    "swr": "^2.2.5"
+    "react-hook-form": "^7.51.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
