--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.3",
+    "@monaco-editor/react": "^4.6.0",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
