--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "swr": "^2.2.5",
     "yjs": "^13.6.15"
   },
   "devDependencies": {
